added inplace=true to dropna in make_csv

--- a/2_Plagiarism_Feature_Engineering.ipynb
+++ b/2_Plagiarism_Feature_Engineering.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4  g0pA_taske.txt    e      non"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "4  g0pA_taske.txt    e         0      0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "9  g0pB_taske.txt    e         1      1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "4  g0pA_taske.txt    e         0      0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "4  dynamic programming is an algorithm design tec...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
        "9  dynamic programming is a method for solving ma...     test  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1768,7 @@
        "9  0.884444  0.526786  0.340807  0.247748  0.180995  0.150000  0.597458"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
        "        1,  1,  0,  0,  1,  1,  1,  1,  0,  0, -1, -1, -1, -1, -1])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2055,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,7 +2159,7 @@
     "    df_values = pd.DataFrame(x)\n",
     "    df_labels = pd.DataFrame(y, columns=['y'])\n",
     "    df = df_labels.join(df_values)\n",
-    "    df.dropna()\n",
+    "    df.dropna(inplace=True)\n",
     "    df.to_csv(str(data_dir)+'/'+str(filename), header=False, index=False)\n",
     "    # nothing is returned, but a print statement indicates that the function has run\n",
     "    print('Path created: '+str(data_dir)+'/'+str(filename))"
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2239,7 +2239,7 @@
        "2  1  0.440860  0.000000  0.223958"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2296,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2313,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
